# UnityPack

./: .gitignore  MANIFEST.in  README.md  asset.py  requirements.txt  setup.cfg
engine/: ETC2ImagePlugin.py
unitypack/: SimpleMultiProcess.py  SimpleMultiThread.py  __init__.py  export.py  type.py  unityfolder.py  utils.py
unitypack-0.9.0/: README.md  setup.cfg
unitypack-0.9.0/unitypack/: assetbundle.py  unityfolder.py
unitypack.egg-info/: PKG-INFO  SOURCES.txt
unitypack/engine/: ETC2ImagePlugin.py  enums.py  texture.py  texture_external.py
unitypack/export/: __init__.py  audio.py  mesh.py  shared.py
