[metadata]
name = unitypack
version = 0.9.1
description = Python implementation of the .unity3d format
author = Jerome Leclanche (modified by K0lb3)
author_email = jerome@leclan.ch
url = https://github.com/K0lb3/UnityPack
download_url = https://github.com/K0lb3/UnityPack/tarball/master
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Multimedia :: Graphics

[options]
include_package_data=True
packages = find:
scripts =
	bin/unityextract
	bin/unity2yaml

install_requires =
	fsb5
	lz4
	Pillow

[options.package_data]
unitypack = 
	classes.json
	strings.dat
	structs.dat
